tests/e2e/tests/simple/testdata/default-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - echosrv
  gateways:
    - istio-ingressgateway # pinned to ingress gateway only
  http:
    match:
      - uri:
        prefix: "/fortio"
    rewrite:
      uri: "/"
    route:
      - destination:
        host: echosrv
        subset: v1
