tests/e2e/tests/simple/testdata/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-echosrv
spec:
  host: echosrv
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
