tests/e2e/tests/simple/testdata/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
    - http:
        paths:
          - path: /fortio/.*
            backend:
              serviceName: echosrv
              servicePort: http-echo
---
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: fortio-redir
spec:
#    source:
#      service: istio-ingress # TODO check it doesn't rewrite intra cluster traffic
    destination:
      name: echosrv
    match:
        request:
          headers:
            uri:
              prefix: /fortio/ # prefix
    rewrite:
        uri: /  # drop the /fortio prefix when talking to fortio such as /fortio/foo -> /foo
---
