tests/e2e/tests/simple/testdata/routingrule1.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: rule-1
spec:
  destination:
    name: echosrv
  precedence: 1
  route:
  - labels:
      version: v1
    weight: 60
  - labels:
      version: v2
    weight: 40
