tests/e2e/tests/simple/testdata/routingrule2.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: rule-2
spec:
  destination:
    name: echosrv
  precedence: 2
  route:
  - labels:
      test: a
    weight: 50
  - labels:
      test: b
    weight: 50
