tests/e2e/tests/simple/testdata/weighted-route1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weighted-route1
spec:
  hosts:
    - echosrv
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
    - route:
      - destination:
          host: echosrv
          subset: v1
          port:
            name: http
        weight: 50
      - destination:
          host: echosrv
          subset: v2
          port:
            name: http
        weight: 50
